fix sidebar width again, also fix a long hostname being cut off weirdly (its still weird but at least it doesn't go off the edge)

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -99,6 +99,8 @@ button {
     color: var(--sidebar-text);
     
     min-width: 170px;
+    max-width: 170px;
+
     display: flex;
     flex-direction: column;
 }
@@ -111,6 +113,10 @@ button {
 .hostname { 
     margin-top: 0;
     margin-bottom: 0.3em;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 /* navbar item links */
